docs/pages/versions/v56.0.0/sdk/ui/swift-ui/picker.mdx
---
title: 选择器
description: 一个用于从列表中选择选项的 SwiftUI Picker 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **信息** 有关跨平台用法，请参阅通用的 [`Picker`](../universal/picker) — 它会为每个平台渲染 შესაბამის的原生组件。

Expo UI Picker 与官方 SwiftUI [Picker API](https://developer.apple.com/documentation/swiftui/picker) 保持一致，并通过 [`pickerStyle`](modifiers/#pickerstylestyle) 修饰符支持所有选择器样式。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/picker/ios-light.webp"
  darkSrc="/static/images/expo-ui/picker/ios-dark.webp"
  alt="菜单样式的 Picker，显示水果选项，并勾选当前选择项"
/>

## 安装

<APIInstallSection />

## 分段式选择器

```tsx SegmentedPickerExample.tsx
import { useState } from 'react';
import { Host, Picker, Text } from '@expo/ui/swift-ui';
import { pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

const options = ['Apple', 'Banana', 'Orange'];

export default function SegmentedPickerExample() {
  const [selectedTag, setSelectedTag] = useState(options[0]);

  return (
    <Host matchContents>
      <Picker
        modifiers={[pickerStyle('segmented')]}
        label="选择一种水果"
        selection={selectedTag}
        onSelectionChange={selection => {
          setSelectedTag(selection);
        }}>
        {options.map(option => (
          <Text key={option} modifiers={[tag(option)]}>
            {option}
          </Text>
        ))}
      </Picker>
    </Host>
  );
}
```

## 菜单选择器

```tsx MenuPickerExample.tsx
import { useState } from 'react';
import { Host, Picker, Text } from '@expo/ui/swift-ui';
import { pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

const options = ['Apple', 'Banana', 'Orange'];

export default function MenuPickerExample() {
  const [selectedTag, setSelectedTag] = useState(options[0]);

  return (
    <Host matchContents>
      <Picker
        modifiers={[pickerStyle('menu')]}
        label="选择一种水果"
        selection={selectedTag}
        onSelectionChange={selection => {
          setSelectedTag(selection);
        }}>
        {options.map(option => (
          <Text key={option} modifiers={[tag(option)]}>
            {option}
          </Text>
        ))}
      </Picker>
    </Host>
  );
}
```

## 滚轮选择器

> **警告** 滚轮变体在 Apple TV 上不可用。

```tsx WheelPickerExample.tsx
import { useState } from 'react';
import { Host, Picker, Text } from '@expo/ui/swift-ui';
import { pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

const options = ['Apple', 'Banana', 'Orange'];

export default function WheelPickerExample() {
  const [selectedTag, setSelectedTag] = useState(options[0]);

  return (
    <Host matchContents>
      <Picker
        modifiers={[pickerStyle('wheel')]}
        label="选择一种水果"
        selection={selectedTag}
        onSelectionChange={selection => {
          setSelectedTag(selection);
        }}>
        {options.map(option => (
          <Text key={option} modifiers={[tag(option)]}>
            {option}
          </Text>
        ))}
      </Picker>
    </Host>
  );
}
```

## API

```tsx
import { Picker } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/picker" apiName="Picker" />
